--- a/Bracez/ViewModelEditor.xib
+++ b/Bracez/ViewModelEditor.xib
@@ -6,7 +6,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="ViewModelEditor"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="ViewModelEditor">
+            <connections>
+                <outlet property="view" destination="c22-O7-iKe" id="gMN-h4-7je"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
@@ -38,7 +42,7 @@
                 <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kfu-vT-q4H">
                     <rect key="frame" x="68" y="-1" width="35" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="TextView" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="yUA-Hf-mHG">
+                    <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="TextView" imagePosition="only" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="yUA-Hf-mHG">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -47,9 +51,9 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E9k-9T-zDp">
-                    <rect key="frame" x="102" y="-1" width="35" height="23"/>
+                    <rect key="frame" x="100.5" y="-1" width="35" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="VertSplit" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5DQ-JZ-i8W">
+                    <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="VertSplit" imagePosition="only" alignment="center" state="on" borderStyle="border" inset="2" id="5DQ-JZ-i8W">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
