--- a/Bracez/English.lproj/MainMenu.xib
+++ b/Bracez/English.lproj/MainMenu.xib
@@ -11,7 +11,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="Bracez" id="56">
@@ -183,6 +183,13 @@
                             <menuItem title="Select All" keyEquivalent="a" id="198">
                                 <connections>
                                     <action selector="selectAll:" target="-1" id="232"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="OX5-qh-ugV"/>
+                            <menuItem title="Reindent JSON" id="mAL-RU-nST">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="indentSelectionAction:" target="-1" id="DZU-sy-JPC"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="720"/>
