WIP: Factored out preferences WIP: Improvements to  localized text repairs GUI changes and cosmetics JsonPath syntax improvements JsonPath fuzzy search and incremental (auto) search

--- a/Bracez/English.lproj/MainMenu.xib
+++ b/Bracez/English.lproj/MainMenu.xib
@@ -311,7 +311,11 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Json" id="718">
                         <items>
-                            <menuItem title="Evaluate jq..." keyEquivalent="E" id="Ac4-VD-Reg"/>
+                            <menuItem title="Evaluate jq..." keyEquivalent="E" id="Ac4-VD-Reg">
+                                <connections>
+                                    <action selector="showJqEval:" target="-1" id="sCm-rS-azu"/>
+                                </connections>
+                            </menuItem>
                             <menuItem title="Associate Schema..." id="722">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
